# tattler

./: .gitignore  INSTALL.md  Makefile  README.md  README_NEW.md  SYSTEM_DESIGN.md  docker-compose.yml  process_video.sh  pyproject.toml  quick_process.sh  requirements.txt  setup_environments.sh
libs/utils/: test_input_utils.py
scripts/: setup_environments.sh
services/detection_orchestrator/: Dockerfile  main.py
services/ffmpeg_extraction_job/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/ffmpeg_extraction_job/src/tattler_ffmpeg/: __init__.py  main.py
services/lpr_job/: Dockerfile  main.py
services/lpr_job/lpr_service/: Dockerfile  main.py
services/persistence_service/: Dockerfile  main.py
services/plate_reader/: README.md  pyproject.toml  run_tests.sh
services/plate_reader/src/tattler_plate_reader/: __init__.py  reader.py
services/plate_reader/tests/: test_plate_reader.py
services/plate_reader/tests/output/: plate_reading_results.txt
services/plate_recognition/: Dockerfile  README.md  pyproject.toml  recognizer.py  requirements.txt  run_tests.sh
services/plate_recognition/src/tattler_plate_recognition/: __init__.py  recognizer.py
services/plate_recognition/tests/: test_plate_recognition.py
services/reporting/: Dockerfile  main.py
services/vehicle_detection/: Dockerfile  README.md  pyproject.toml  requirements.txt  run_tests.sh
services/vehicle_detection/src/tattler_vehicle_detection/: __init__.py  detector.py
services/vehicle_detection/tests/: test_extract_vehicles.py
services/vehicle_detection_service/: Dockerfile  detector.py  main.py  run_tests.sh
services_new/license_plate_recognition/: debug_plate_detection.py  enhanced_ocr.py  improved_plate_detection.py  integrated_pipeline.py  ocr.py  requirements.txt  test_integrated.py  test_standalone.py
services_new/vehicle_detection/: detector.py  requirements.txt  test_standalone.py
src/tattler/: __init__.py
src/tattler/utils/: __init__.py  input_utils.py
